--- a/boss.ini
+++ b/boss.ini
@@ -1,329 +1,169 @@
 ﻿﻿-----일반보스-----
-bossname = 체르투바
-gentime = 06:00
+bossname = 분노의 모네가름
+gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 체르투바의 막사로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 지감 4층으로 오세요
 mungtime = 1
 
-bossname = 바실라
-gentime = 04:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 황무지 남부로 오세요
-mungtime = 1
-
-bossname = 켈소스
-gentime = 10:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 절망의 폐허로 오세요
-mungtime = 1
-
-bossname = 여왕개미
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 개미굴 3층으로 오세요
-mungtime = 1
-
-bossname = 사반
+bossname = 나태의 드라우그
 gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 개미굴 2층으로 오세요
+alert_ment = 탐 입니다. 지감 7층으로 오세요
 mungtime = 1
 
-bossname = 펠리스
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 비하이브로 오세요
-mungtime = 1
-
-bossname = 템페스트
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 시체 처리소로 오세요
-mungtime = 1
-
-bossname = 엔쿠라
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 디온 목초지로 오세요
-mungtime = 1
-
-bossname = 탈라킨
-gentime = 10:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 반란군의 아지트로 오세요
-mungtime = 1
-
-bossname = 사르카
-gentime = 10:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 델루 리자드맨 서식지로 오세요
-mungtime = 1
-
-bossname = 판드
+bossname = 파르바
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 디온 구릉지로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 요툰 오크부락으로 오세요
 mungtime = 1
 
-bossname = 스탄
-gentime = 07:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 거인의 흔적으로 오세요
-mungtime = 1
-
-bossname = 크루마
-gentime = 08:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 크루마 습지로 오세요
-mungtime = 1
-
-bossname = 티미트리스
-gentime = 08:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 플로란 개간지로 오세요
-mungtime = 1
-
-bossname = 오염크루마
-gentime = 08:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 크루마탑 3층으로 오세요
-mungtime = 1
-
-bossname = 카탄
-gentime = 10:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 크루마탑 6층으로 오세요
-mungtime = 1
-
-bossname = 코어
-gentime = 10:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 크루마탑 7층으로 오세요
-mungtime = 1
-
-bossname = 릴리
+bossname = 셀로비아
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 죽음의 회랑으로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 요툰 거미군락으로 오세요
 mungtime = 1
 
-bossname = 메두사
-gentime = 10:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 메두사의 정원으로 오세요
-mungtime = 1
-
-bossname = 판나
-gentime = 05:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 고르곤 화원으로 오세요
-mungtime = 1
-
-bossname = 마투라
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 약탈자의 야영지로 오세요
-mungtime = 1
-
-bossname = 브래카
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 브래카 소굴로 오세요
-mungtime = 1
-
-bossname = 베히모스
-gentime = 09:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 용의 계곡 북부로 오세요
-mungtime = 1
-
-bossname = 드비
+bossname = 흐니르
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 안타라스의 동굴 6층으로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 요툰 남부 황무지로 오세요
 mungtime = 1
 
-bossname = 탈킨
-gentime = 08:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 레토 리자드맨 부락으로 오세요
-mungtime = 1
-
-bossname = 셀루
+bossname = 페티
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 파아그리오의 제단으로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 요툰 이둔의 정원으로 오세요
 mungtime = 1
 
-bossname = 발보
+bossname = 바우티
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 산적 산채로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 요툰 고대종 싸움터로 오세요
 mungtime = 1
 
-bossname = 티미니엘
-gentime = 08:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 티미니엘의 보금자리로 오세요
-mungtime = 1
-
-bossname = 레피로
-gentime = 07:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 포자 확산지로 오세요
-mungtime = 1
-
-bossname = 오르펜
-gentime = 24:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 포자 확산지로 오세요
-mungtime = 1
-
-bossname = 가레스
-gentime = 09:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 타노르 협곡으로 오세요
-mungtime = 1
-
-bossname = 트롬바
-gentime = 07:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 피의 늪지대로 오세요
-mungtime = 1
-
-bossname = 망각의거울
-gentime = 11:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 거울의 숲으로 오세요
-mungtime = 1
-
-bossname = 히실로메
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 격전의 평원으로 오세요
-mungtime = 1
-
-bossname = 란도르
-gentime = 09:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 망각의 평원으로 오세요
-mungtime = 1
-
-bossname = 글라키
-gentime = 08:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 고요한 분지로 오세요
-mungtime = 1
-
-bossname = 올크스
-gentime = 24:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 고요한 분지로 오세요
-mungtime = 1
-
-bossname = 코룬
+bossname = 니드호그
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 상아탑 2층으로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 요툰 악룡의 안식처로 오세요
 mungtime = 1
 
-bossname = 사무엘
+bossname = 야른
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 상아탑 3층으로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 요툰 공허의 골짜기로 오세요
 mungtime = 1
 
-bossname = 노르무스
-gentime = 08:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 대지의 제단으로 오세요
-mungtime = 1
-
-bossname = 우칸바
+bossname = 티르
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 물의 제단으로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 요툰 티르의 서리요새로 오세요
 mungtime = 1
 
-bossname = 실라
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 바람의 제단으로 오세요
-mungtime = 1
-
-bossname = 무프
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 어둠의 제단으로 오세요
-mungtime = 1
-
-bossname = 카브리오
+bossname = 라이노르
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 국립 묘지로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 니다 코뿔소 서식지로 오세요
 mungtime = 1
 
-bossname = 플린트
-gentime = 05:00
+bossname = 헤르모드
+gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 국립 묘지로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 니다 안드바리 대장간으로 오세요
 mungtime = 1
 
-bossname = 하프
-gentime = 20:00
+bossname = 스칼라니르
+gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 실렌의 봉인으로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 니다 죽은 용의 둥지로 오세요
 mungtime = 1
 
-bossname = 안드라스
-gentime = 15:00
+bossname = 비요른
+gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 탐 입니다. 학살의 대지로 오세요
+before_alert_ment = 준비
+alert_ment = 탐 입니다.  니다 도굴단 요새로 오세요
 mungtime = 1
+
+bossname = 브륀힐드
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 니다 타락의 땅으로 오세요
+mungtime = 1
+
+bossname = 수드리
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 니다 드베르그 부락으로 오세요
+mungtime = 1
+
+bossname = 라타토스크
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 니다 니다벨리르 고원으로 오세요
+mungtime = 1
+
+bossname = 토르
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 니다 우레 벌판으로 오세요
+mungtime = 1
+
+bossname = 스바르트
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 알브 그림자 잠복처로 오세요
+mungtime = 1
+
+bossname = 두라스로르
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 알브 곰숲으로 오세요
+mungtime = 1
+
+bossname = 모네가름
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 알브 타락협곡으로 오세요
+mungtime = 1
+
+bossname = 드라우그
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 알브 어둠달 고원으로 오세요
+mungtime = 1
+
+bossname = 굴베이그
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 알브 공허의 평원으로 오세요
+mungtime = 1
+
+bossname = 오딘
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 준비
+alert_ment = 탐 입니다. 알브 오딘 강림지로 오세요
+mungtime = 1
+
