--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -1,339 +1,30 @@
------고정보스-----
-
-bossname = 람달
-bosstime = 13:00
+﻿-----고정보스-----
+bossname = 가름
+bosstime = 12:00
 genPeriod = 24:00
-startDate = 2021-07-02
+startDate = 2020-09-22
 before_alert_ment = 입니다
-alert_ment = 입니다. 
+alert_ment = 탐 입니다. 요툰으로 오세요
 
-bossname = 람달
-bosstime = 18:00
-genPeriod = 24:00
-startDate = 2021-07-02
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 마르딜
-bosstime = 14:00
-genPeriod = 24:00
-startDate = 2021-07-02
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 마르딜
-bosstime = 19:00
-genPeriod = 24:00
-startDate = 2021-07-02
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 케르논
-bosstime = 15:00
-genPeriod = 24:00
-startDate = 2021-07-02
-before_alert_ment = 입니다
-alert_ment = 입니다.
-
-bossname = 케르논
+bossname = 가름
 bosstime = 20:00
 genPeriod = 24:00
-startDate = 2021-07-02
+startDate = 2020-09-22
 before_alert_ment = 입니다
-alert_ment = 입니다.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+alert_ment = 탐 입니다. 요툰으로 오세요
+
+bossname = 발두르
+bosstime = 12:00
+genPeriod = 24:00
+startDate = 2020-09-22
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 니다로 오세요
+
+bossname = 발두르
+bosstime = 20:00
+genPeriod = 24:00
+startDate = 2020-09-22
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 니다로 오세요
 
 
