--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 894957197958713434
 textchannel = 894957095424753714
 ladderchannel = 
 jungsanchannel = 
