--- a/kill_list.ini
+++ b/kill_list.ini
@@ -1,73 +1,1 @@
-﻿-----척살명단-----
-욱파더
-낙제전사
-임싀봉
-유자똥
-신정동샌드백
-억만금
-prisoner
-죽뽱
-귀멸의잉어
-달이콩이 
-이솔쿤
-노을내린저녁
-곰순이
-쨘쪈
-싸피론
-스나이퍼형
-허브믹스
-역삼동정남
-쵸프
-풀잎꽃님
-루비코코
-혀니사랑
-김끄뉵
-닳크
-그린마이어
-호야팔라딘
-희야세인트
-치유대상
-도끼똥
-볼매쪼재
-신월동이쁜이
-땡초O
-아잇폰
-귀멸의잉어
-진구맘카페회원
-삼선짜장면
-다린쓰
-무적아처
-Homme
-momo짱, 
-궁둥이쪽쮸, 
-똥개오빠
-수지닝오빠
-또TS
-coolhan
-미래전략본부장
-S2서나S2
-이음이아빠
-치킨마스터
-별과섬
-해신활
-술고픈용가리
-BTS김태형
-누구앤
-칠곡장동식
-천하제삼색
-쎄바
-호이짬
-Ruined
-박땐땐
-돔황챱
-wepildup
-라빛
-이비로트
-듀의남자
-욱의여자
-잠만뼈맞았어
-아가야놀자
-박지민BTS
-김낑맨
-노버프
-허믹
+-----척살명단-----
